Fix unit test