@@ -19,15 +19,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    testOptions {
-        unitTests.all {
-            jvmArgs += [
-                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                '--add-opens', 'java.base/java.util=ALL-UNNAMED',
-                '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED'
-            ]
-        }
-    }
+
 }
 
 kotlin.jvmToolchain(17)
